<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wangtianfeng.learning.jdk.javafx</groupId>
    <artifactId>sign</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>sign</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.9.2</junit.version>
        <main.class>com.wangtianfeng.learning.jdk.javafx.sign.MainApplication</main.class>
        <app.identifier>${main.class}</app.identifier>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>19.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>19.0.2</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.16.1</version> <!-- 模块化的包，jlink不支持自动模块(非模块化的包) -->
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>windows</id>
            <properties>
                <icon.path>${project.build.directory}/classes/sign.ico</icon.path>
                <gluonfx.target>host</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <icon.path>${project.build.directory}/classes/sign.icns</icon.path>
                <gluonfx.target>host</gluonfx.target>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>linux</id>
            <properties>
                <gluonfx.target>host</gluonfx.target>
                <icon.path>${project.build.directory}/classes/sign.png</icon.path>
            </properties>
        </profile>
        <profile>
            <id>android</id>
            <properties>
                <package.type>apk</package.type>
                <gluonfx.target>android</gluonfx.target>
                <app.identifier>com.gluonhq.samples.hellogluon</app.identifier>
            </properties>
        </profile>
    </profiles>
    <build>
        <finalName>OpenSign</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- 一般通过mvn clean javafx:run直接运行项目，或执行javafx:jlink创建镜像文件，如果是需要打包，则可以直接使用下面的jpackage -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>
                                com.wangtianfeng.learning.jdk.javafx.sign/com.wangtianfeng.learning.jdk.javafx.sign.MainApplication
                            </mainClass>
                            <!-- 这个不生效，不知道是不是bug -->
                            <!-- <addModules>com.wangtianfeng.learning.jdk.javafx.sign,javafx.controls,javafx.fxml,java.base,java.sql,java.security.jgss,jdk.crypto.ec</addModules>-->
                            <launcher>OpenSign</launcher>
                            <jlinkZipName>OpenSign</jlinkZipName>
                            <jlinkImageName>OpenSign</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <compress>2</compress>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <!-- 基本信息 -->
                    <name>OpenSign</name>
                    <appVersion>1.0.0</appVersion>
                    <vendor>Shanon.top</vendor>
                    <copyright>Copyright © 2025 Shanon</copyright>
                    <description>Sign Tool</description>
                    <module>
                        com.wangtianfeng.learning.jdk.javafx.sign/com.wangtianfeng.learning.jdk.javafx.sign.MainApplication
                    </module>
                    <!-- 应用启动时的选项 -->
                    <javaOptions>
                        <javaOption>-Xmx2g</javaOption>
                        <javaOption>-Xms2g</javaOption>
                        <javaOption>-XX:+UseG1GC</javaOption>
<!--                        <javaOption>-Djavafx.preloader=com.wangtianfeng.learning.jdk.javafx.sign.AppPreloader</javaOption>-->
                        <javaOption>-Dprism.verbose=false</javaOption>
                        <javaOption>-Dprism.order=sw</javaOption>
                        <javaOption>-Xverify:none</javaOption>
                        <javaOption>-XX:TieredStopAtLevel=1</javaOption>
                        <javaOption>-XX:+TieredCompilation</javaOption>
                        <javaOption>-Djava.awt.headless=true</javaOption>
                        <javaOption>-XX:TieredStopAtLevel=1</javaOption>
                        <javaOption>-Djavafx.verbose=false</javaOption>
                        <javaOption>-Djavafx.pulseLogger=false</javaOption>
                        <javaOption>-Dfile.encoding=UTF-8</javaOption>
                    </javaOptions>
                    <!-- 应用启动时传给main方法的参数 -->
                    <arguments>
                        <argument>abc</argument>
                    </arguments>
                    <!-- ↓ start 传给jlink的参数，如果前置使用了jlink则配置runtimeImage即可，不需要配置这些 start ↓ -->
                    <!-- 但如果配置了这些，则可以完全不依赖javafx-maven-plugin插件 -->
                    <modulePaths>
                        <modulePath>${project.build.directory}/${build.finalName}.jar</modulePath>
                        <!-- 需要maven-dependency-plugin插件配合复制依赖包 -->
                        <modulePath>${project.build.directory}/lib</modulePath>
                    </modulePaths>
                    <!-- 增加https支持，也可以写在module-info.java中，但jdeps分析不出来 -->
<!--                    <addModules>java.security.jgss,jdk.crypto.ec</addModules>-->
                    <!-- 也可以通过jLinkOptions直接指定jlink参数 -->
                    <jLinkOptions>
                        <jLinkOption>--compress=2</jLinkOption>
                        <jLinkOption>--strip-native-commands</jLinkOption>
                        <jLinkOption>--strip-debug</jLinkOption>
                        <jLinkOption>--no-man-pages</jLinkOption>
                        <jLinkOption>--no-header-files</jLinkOption>
                    </jLinkOptions>
                    <!-- ↑ end 传给jlink的参数，如果前置使用了jlink则配置runtimeImage即可，不需要配置这些 end ↑ -->
                    <!-- <runtimeImage>${project.build.directory}/${project.build.finalName}</runtimeImage>-->
                    <icon>${icon.path}</icon>
                    <!-- Windows 特定配置 -->
                    <winShortcut>true</winShortcut>
                    <winDirChooser>true</winDirChooser>
                    <!-- mac特定配置 -->
                    <macPackageIdentifier>com.wangtianfeng.learning.jdk.javafx.sign</macPackageIdentifier>
                    <macPackageName>${project.build.finalName}</macPackageName>
                    <macSign>false</macSign>
                    <!-- 输出配置 -->
                    <destination>${project.build.directory}</destination>
                    <temp>${project.build.directory}/${project.build.finalName}Temp</temp>
                    <!-- 打包详情和控制台 -->
                    <!-- <winConsole>true</winConsole>-->
                    <!-- <verbose>true</verbose>-->
                    <!-- 将主应用启动程序注册为后台服务类型应用程序 -->
                    <!--<launcherAsService>true</launcherAsService>-->
                </configuration>
            </plugin>

            <!-- 复制依赖到lib目录 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.27</version>
                <configuration>
                    <target>${gluonfx.target}</target>      <!-- 当前操作系统类型 -->
<!--                    <target>ios</target>       &lt;!&ndash; iOS &ndash;&gt;-->
<!--                    <target>android</target>   &lt;!&ndash; Android &ndash;&gt;-->
<!--                    <target>linux-aarch64</target> &lt;!&ndash; 树莓派等 &ndash;&gt;-->
                    <mainClass>${main.class}</mainClass>
<!--                    <javafxStaticSdkVersion>21.0.3</javafxStaticSdkVersion>-->

                    <!-- 声明需要反射的类，也可以执行mvn gluonfx:build后，-->
                    <!-- 将生成的target/gluonfx/aarch64-darwin/gvm目录下的reflectionconfig、resourceconfig、jniconfig文件 -->
                    <!-- 重命名为reflect-config.json、resource-config.json、jni-config.json后放到src/main/resources/META-INF/native-image/目录下 -->
                    <!-- 并在文件中添加需要显示声明的反射类 -->
<!--                    <reflectionList>-->
<!--                        <list>com.wangtianfeng.learning.jdk.javafx.sign.SignController</list>-->
<!--                        <list>${project.basedir}/src/main/META-INF/native-image/reflection-config.json</list>-->
<!--                    </reflectionList>-->
                    <appIdentifier>${app.identifier}</appIdentifier>
                    <!-- 配置打包为安装文件，默认为可执行文件 -->
                    <releaseConfiguration>
                        <vendor>Your Company</vendor>
                        <description>A sample JavaFX app</description>
                        <packageType>${package.type}</packageType>
                    </releaseConfiguration>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
